--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "Selvania-Launcher",
+    "name": "MicroNetworks-Launcher",
     "preductname": "Selvania Launcher",
-    "version": "2.1.4",
-    "description": "Launcher Mincraft pour le serveur Selvania",
+    "version": "1.0.0",
+    "description": "Launcher Mincraft pour le serveur MicroNetworks",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
-        "url": "https://github.com/luuxis"
+        "name": "",
+        "email": "",
+        "url": ""
     },
-    "url": "http://launcher.luuxis.fr",
+    "url": "http://microfight.fr.fr",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
