--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/mojoQC/MicroNetworks-Launcher"
+        "url": "git+https://github.com/mojoQC/MicroNetworks-Launcher.git"
     }
 }
